test/Fail/Issue1015a.err
Issue1015a.agda:35.1-8: error: [ComatchingDisabledForRecord]
Copattern matching is disabled for record R
when checking the clause left hand side
R.j inh
